--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: successr
 Type: Package
 Title: Work with Successor Algorithms
-Version: 0.1.0
+Version: 0.0.0.9000
 Author: Jae-Young Son
 Maintainer: Jae-Young Son <jae@brown.edu>
 Description: Tidy-friendly tools for working with the Successor Features (SF)
@@ -11,8 +11,11 @@ License: MIT license
 URL: https://github.com/psychNerdJae/successr
 Encoding: UTF-8
 LazyData: true
-Imports: 
+Requires: 
     dplyr,
     tidyr,
     igraph,
     tidygraph
+RoxygenNote: 7.1.2
+Depends: 
+    R (>= 2.10)
