was accidentally aliasing `generate_experiment` and `generate_random_walk`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(adjlist_to_matrix)
 export(counts_to_probability)
+export(generate_experiment)
 export(generate_random_walk)
 export(graph_to_adjlist)
 export(initialize_successor)
@@ -15,7 +16,6 @@ import(tidyr)
 importFrom(igraph,as_ids)
 importFrom(igraph,random_walk)
 importFrom(igraph,vcount)
-importFrom(purrr,pluck)
 importFrom(stringr,str_remove)
 importFrom(tibble,enframe)
 importFrom(tidygraph,activate)
