examples + fresh roxygen re-compile

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,13 @@ export(convert_adjlist_to_matrix)
 export(convert_graph_to_adjlist)
 export(convert_graph_to_matrix)
 export(convert_matrix_to_adjlist)
-export(counts_to_probability)
-export(generate_experiment)
-export(generate_random_walk)
 export(initialize_successor)
-export(learn_from_observations)
-export(learn_from_param_sweep)
-export(probability_to_counts)
-export(update_successor)
+export(learn_successor)
+export(simulate_pairwise)
+export(simulate_random_walk)
+export(translate_counts_to_probabilities)
+export(translate_gamma_to_lookahead)
+export(translate_lookahead_to_gamma)
+export(translate_probabilities_to_counts)
 import(dplyr)
 import(tidyr)
