get rid of whole-package namespace imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,4 @@ export(translate_counts_to_probabilities)
 export(translate_gamma_to_lookahead)
 export(translate_lookahead_to_gamma)
 export(translate_probabilities_to_counts)
-import(dplyr)
-import(tidyr)
+importFrom(magrittr,`%>%`)
