--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(convert_matrix_to_adjlist)
 export(initialize_successor)
 export(learn_successor)
 export(simulate_pairwise)
-export(simulate_random_walk)
+export(simulate_walk)
 export(translate_counts_to_probabilities)
 export(translate_gamma_to_lookahead)
 export(translate_lookahead_to_gamma)
